@@ -105,6 +105,8 @@ include_once('include/page_header.php');
 					$sysmaps = CMap::get($options);
 					$db_map = reset($sysmaps);
 
+					expandMapLabels($db_map);
+
 					$map_info = getSelementsInfo($db_map['selements'], $db_map['expandproblem']);
 //SDII($db_map);
 					add_elementNames($db_map['selements']);
@@ -247,6 +249,7 @@ include_once('include/page_header.php');
 
 //						$selement['image'] = get_base64_icon($element);
 						$selement['image'] = get_selement_iconid($selement);
+						$selement['label_expanded'] = expand_map_element_label_by_data($selement);
 
 						$action = '';
 						$action.= 'ZBX_SYSMAPS['.$cmapid.'].map.add_selement('.zbx_jsvalue($selement).',1);';
