@@ -4,6 +4,7 @@ Changes for 1.9
 
 Changes for 1.8.2
 
+ - [ZBX-1823] improved map element labels expansion in map editing screen (Aly)
  - [ZBX-1991] added sequences for autoincrement fields to oracle.sql (Sasha)
  - [ZBX-2045] fixed trigger editor does not preserve element ordering (Vedmak)
  - [ZBX-2003] fixed evaluation of division and subtraction (asaveljevs)
